Colaboratory を使用して作成しました

--- a/lightgbm_btc_model.ipynb
+++ b/lightgbm_btc_model.ipynb
@@ -6,7 +6,7 @@
       "name": "lightgbm_btc_model.ipynb",
       "provenance": [],
       "mount_file_id": "1PWu_KpUovHCBLrLmds4lwuHymA44Vsa8",
-      "authorship_tag": "ABX9TyN7zQtjINdywRz9m9JSJocr",
+      "authorship_tag": "ABX9TyP/AyN76umdIZO2RfbvRuV0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,13 +94,13 @@
           "height": 615
         },
         "id": "tAoE6qrmMTLH",
-        "outputId": "e982e554-58f2-4d54-d452-dde65213ff3d"
+        "outputId": "1903ce94-ca40-44bd-f400-9fbf1ca96f5f"
       },
       "source": [
         "df1=pd.read_csv('/content/drive/MyDrive/btc 9月12日-11月26日.csv')\n",
         "df1"
       ],
-      "execution_count": 40,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -255,7 +255,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 184
         }
       ]
     },
@@ -267,13 +267,13 @@
           "height": 441
         },
         "id": "OFBhNwrTMTGs",
-        "outputId": "459f41ae-3c85-49de-86be-37a7da643050"
+        "outputId": "3d5b0095-1185-435a-e251-7a2a9649c3a9"
       },
       "source": [
-        "df2=pd.read_csv('/content/drive/MyDrive/btc 11月26日②　15分ごとデータ.csv')\n",
+        "df2=pd.read_csv('/content/drive/MyDrive/btc 11月26日-12月6日.csv')\n",
         "df2"
       ],
-      "execution_count": 41,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 186
         }
       ]
     },
